@@ -1681,7 +1681,9 @@ name|masterUrl
 operator|.
 name|endsWith
 argument_list|(
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 condition|)
 block|{
@@ -1705,7 +1707,13 @@ name|LOG
 operator|.
 name|warn
 argument_list|(
-literal|"'masterUrl' must be specified without the /replication suffix"
+literal|"'masterUrl' must be specified without the "
+operator|+
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|" suffix"
 argument_list|)
 expr_stmt|;
 block|}
@@ -1969,7 +1977,9 @@ name|CommonParams
 operator|.
 name|QT
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -2110,7 +2120,9 @@ name|CommonParams
 operator|.
 name|QT
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -9567,7 +9579,9 @@ name|CommonParams
 operator|.
 name|QT
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 comment|//add the version to download. This is used to reserve the download
@@ -10276,7 +10290,9 @@ name|CommonParams
 operator|.
 name|QT
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 comment|// TODO use shardhandler
