@@ -348,6 +348,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|ReplicationHandler
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -2070,7 +2083,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|params
