@@ -84,6 +84,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|handler
+operator|.
+name|ReplicationHandler
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|params
@@ -799,7 +812,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
