@@ -50,6 +50,19 @@ name|solr
 operator|.
 name|handler
 operator|.
+name|ReplicationHandler
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
 name|RequestHandlerBase
 import|;
 end_import
@@ -710,7 +723,9 @@ name|pathToClassMap
 operator|.
 name|get
 argument_list|(
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 argument_list|,
 literal|"solr.ReplicationHandler"
