@@ -1470,7 +1470,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -1582,7 +1584,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -1663,7 +1667,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -1830,6 +1836,26 @@ argument_list|(
 name|adminUrl
 argument_list|)
 return|;
+block|}
+annotation|@
+name|Test
+DECL|method|doTestHandlerPathUnchanged
+specifier|public
+name|void
+name|doTestHandlerPathUnchanged
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertEquals
+argument_list|(
+literal|"/replication"
+argument_list|,
+name|ReplicationHandler
+operator|.
+name|PATH
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -2711,7 +2737,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?command="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?command="
 operator|+
 name|pCommand
 decl_stmt|;
@@ -3623,7 +3653,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?command=fetchindex&masterUrl="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?command=fetchindex&masterUrl="
 decl_stmt|;
 name|masterUrl
 operator|+=
@@ -3639,7 +3673,9 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 expr_stmt|;
 name|URL
 name|url
@@ -5425,7 +5461,9 @@ name|set
 argument_list|(
 literal|"qt"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|)
 expr_stmt|;
 name|params
@@ -5669,7 +5707,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?wait=true&command=fetchindex&masterUrl="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?wait=true&command=fetchindex&masterUrl="
 operator|+
 name|buildUrl
 argument_list|(
@@ -5683,7 +5725,9 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 expr_stmt|;
 name|url
 operator|=
