@@ -1775,7 +1775,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?command="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?command="
 operator|+
 name|cmd
 operator|+
@@ -1902,7 +1906,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?command="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?command="
 operator|+
 name|ReplicationHandler
 operator|.
