@@ -1381,7 +1381,11 @@ literal|"/"
 operator|+
 name|DEFAULT_TEST_CORENAME
 operator|+
-literal|"/replication?command="
+name|ReplicationHandler
+operator|.
+name|PATH
+operator|+
+literal|"?command="
 operator|+
 name|ReplicationHandler
 operator|.
