@@ -1022,7 +1022,9 @@ name|makeMap
 argument_list|(
 literal|"resource"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|,
 literal|"httpMethod"
 argument_list|,
@@ -1061,7 +1063,9 @@ name|makeMap
 argument_list|(
 literal|"resource"
 argument_list|,
-literal|"/replication"
+name|ReplicationHandler
+operator|.
+name|PATH
 argument_list|,
 literal|"httpMethod"
 argument_list|,
